Added purple button style

--- a/Sources/PublicResources/assets/css/style.css
+++ b/Sources/PublicResources/assets/css/style.css
@@ -1,10 +1,29 @@
 body {
   padding-top: 60;
+  font-family: Verdana;
 }
 
 
 header {
 	margin-top: 0px;
+}
+
+.bg-purple {
+    background-color: #7367F0;
+}
+
+.btn-purple {
+    font-size: 14px;
+    background-color: #7367F0;
+    border-color: #7367F0;
+    color: #fff;
+}
+
+.btn-purple:hover {
+    background-color: #7367F0;
+    border-color: #7367F0;
+    color: #fff;
+    box-shadow: 0px 5px 15px -5px #9185FF;
 }
 
 .bg-blue {
