--- a/Sources/PublicResources/assets/css/style.css
+++ b/Sources/PublicResources/assets/css/style.css
@@ -1,15 +1,51 @@
 body {
   padding-top: 60;
   font-family: Verdana;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
-
 header {
-	margin-top: 0px;
+	margin-top: 30px;
+}
+
+.app-name {
+    font-size: 24px;
+}
+
+.app-logo {
+    height: 48px;
+}
+
+footer {
+    font-size: 14px;
+    color: #989898;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+}
+
+a {
+    color: #7367F0;
+}
+
+a:hover {
+    color: #7367F0;
+    text-shadow : 0 0 0 #7367F0;
+    text-decoration: none;
 }
 
 .bg-purple {
     background-color: #7367F0;
+}
+
+.text-purple {
+    color: #7367F0;
+}
+
+.gray-shadow {
+    box-shadow: 0px 10px 15px -5px #DEDEDE;
 }
 
 .btn-purple {
@@ -25,6 +61,9 @@ header {
     color: #fff;
     box-shadow: 0px 5px 15px -5px #9185FF;
 }
+
+
+
 
 .bg-blue {
 	background-color: #008080;
