--- a/Sources/PublicResources/assets/css/style.css
+++ b/Sources/PublicResources/assets/css/style.css
@@ -44,6 +44,14 @@ a:hover {
     color: #7367F0;
 }
 
+.text-gray {
+    color: #5E5873;
+}
+
+.text-small {
+    font-size: 13px;
+}
+
 .gray-shadow {
     box-shadow: 0px 10px 15px -5px #DEDEDE;
 }
@@ -62,8 +70,15 @@ a:hover {
     box-shadow: 0px 5px 15px -5px #9185FF;
 }
 
+.title {
+    font-size: 22px;
+    color: #5E5873;
+}
 
-
+form label {
+    font-size: 13px;
+    color: #5E5873;
+}
 
 .bg-blue {
 	background-color: #008080;
