--- a/Sources/PublicResources/assets/css/style.css
+++ b/Sources/PublicResources/assets/css/style.css
@@ -3,6 +3,15 @@
     src: url(../fonts/Montserrat/Montserrat-Regular.ttf);
 }
 
+html, body, .full {
+  height: 100%;
+}
+
+.full {
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   padding-top: 60;
   font-family: MontserratRegular;
@@ -23,10 +32,12 @@ header {
 }
 
 footer {
+    display: flex;
+    flex-grow: 1;
+    align-items: flex-end;
     font-size: 14px;
     color: #989898;
     width: 100%;
-    height: 30px;
 }
 
 a {
