Added semi-bold css class

--- a/Sources/PublicResources/assets/css/style.css
+++ b/Sources/PublicResources/assets/css/style.css
@@ -3,6 +3,15 @@
     src: url(../fonts/Montserrat/Montserrat-Regular.ttf);
 }
 
+@font-face {
+    font-family: MontserratSemiBold;
+    src: url(../fonts/Montserrat/Montserrat-SemiBold.ttf);
+}
+
+.semi-bold {
+    font-family: MontserratSemiBold;
+}
+
 html, body, .full {
   height: 100%;
 }
