--- a/Sources/PublicResources/assets/css/theme.css
+++ b/Sources/PublicResources/assets/css/theme.css
@@ -42,13 +42,21 @@ a:hover {
     box-shadow: 0px 5px 15px -5px #9185FF;
 }
 
-.label-purple {
-    color: #7367F0;
-    background-color: #E6E5F8;
+.label {
     padding: 3px;
     padding-left: 10px;
     padding-right: 10px;
     font-family: MontserratSemiBold;
     border-radius: 5px;
     font-size: 13px;
+}
+
+.label-purple {
+    color: #7367F0;
+    background-color: #E6E5F8;
+}
+
+.label-green {
+    color: #28C76F;
+    background-color: #E5F7EE;
 }
