--- a/Sources/PublicResources/assets/css/theme.css
+++ b/Sources/PublicResources/assets/css/theme.css
@@ -1,3 +1,18 @@
+#loader {
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    background: rgba(128, 128, 128, .85);
+    text-align: center;
+    color: black;
+    padding: 270px 0;
+}
+
 a {
     color: #7367F0;
 }
